fix: jbang jvm flags for javafx